--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
-
 <!DOCTYPE html>
 <html>
-
 <head>
 	<!-- <link rel="stylesheet" href="./index.css" /> -->
 	<style>
@@ -39,7 +37,7 @@
 
 <body>
 
-	<h1 class="heading">PicoCTF</h1>
+	<h1 class="heading">customCTF</h1>
 	<p></p>
 
 	<div class="normal-form">
