--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 	<p></p>
 
 	<div class="normal-form">
-		<h2 id="sub-heading">Valid Input</h2>
+		<h2 id="sub-heading">Input Password</h2>
 		<form action="#" onsubmit="return send_request()">
-			<input type="text" id="name" name="input" placeholder="Input text">
+			<input type="text" id="name" name="input" placeholder="password">
 			<br>
 			<br>
 			<button id="submit-but" type="submit" id="submit-button">SUBMIT</button>
