--- a/index.html
+++ b/index.html
@@ -1,40 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<!-- <link rel="stylesheet" href="./index.css" /> -->
-	<style>
-		.heading {
-			width: 100%;
-			height: 40px;
-			background-color: coral;
-			padding-left: 10px;
-			font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-		}
-
-		.normal-form {
-			text-align: center;
-			margin-top: 5%;
-		}
-
-		#submit-but {
-			border-radius: 0;
-			width: 250px;
-			height: 25px;
-
-		}
-
-		#name {
-			width: 250px;
-			height: 25px;
-			background-color: rgb(241, 226, 206);
-		}
-
-		#sub-heading {
-			color: brown;
-		}
-	</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Facts About CTFs (by customCTF)</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f4f4f9;
+            color: #333;
+        }
+        .content {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: #E63946;
+            text-align: center;
+        }
+        h2 {
+            color: #457B9D;
+        }
+        ul {
+            list-style-type: square;
+        }
+    </style>
 </head>
-
 <body>
-
-	<h1 class="heading">customCTF</h1>
+    <div class="content">
+        <h1>Facts About CTFs (Capture The Flag)</h1>
+        <h2>What is a CTF?</h2>
+        <p>Capture The Flag (CTF) is a type of cybersecurity competition where participants tackle security challenges to capture "flags." These flags are secret strings hidden in challenges.</p>
+        <h2>Types of CTFs</h2>
+        <ul>
+            <li><strong>Jeopardy-style:</strong> Consists of challenges in categories like cryptography, forensics, and web security. Participants solve tasks to earn points.</li>
+            <li><strong>Attack-Defense:</strong> Teams defend their systems while trying to attack others. It's a real-time simulation of cybersecurity warfare.</li>
+        </ul>
+        <h2>Why Participate?</h2>
+        <p>CTFs are an excellent way to improve cybersecurity skills, understand security concepts, and gain hands-on experience. They also provide networking opportunities with industry professionals and enthusiasts.</p>
+        <h2>Popular CTF Events</h2>
+        <ul>
+            <li><strong>customCTF:</strong> A CTF invented entirely by one person.</li>
+            <li><strong>PicoCTF:</strong> A beginner-friendly CTF designed for high school students but open to everyone.</li>
+            <li><strong>Google CTF:</strong> Hosted by Google, offering both beginner and advanced challenges.</li>
+        </ul>
+    </div>
+</body>
+</html>
