--- a/index.html
+++ b/index.html
@@ -3,36 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facts About CTFs (by customCTF)</title>
+    <title>Facts About CTFs</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            background-color: #f4f4f9;
-            color: #333;
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f7fa;
+            color: #434C5E;
+            line-height: 1.6;
         }
-        .content {
+        .container {
             max-width: 800px;
-            margin: 0 auto;
+            margin: 40px auto;
             padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            background-color: #ffffff;
+            border-radius: 12px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            transition: box-shadow 0.3s ease;
+        }
+        .container:hover {
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
         }
         h1 {
-            color: #E63946;
+            color: #3B4252;
+            font-weight: 700;
             text-align: center;
+            margin-bottom: 20px;
         }
         h2 {
-            color: #457B9D;
+            color: #81A1C1;
+            font-weight: 500;
+            margin-top: 30px;
+        }
+        p, ul {
+            font-weight: 400;
         }
         ul {
-            list-style-type: square;
+            list-style-type: disc;
+            padding-left: 20px;
+        }
+        li {
+            margin-bottom: 10px;
+        }
+        @media (max-width: 600px) {
+            .container {
+                margin: 20px 10px;
+            }
+            h1 {
+                font-size: 1.8em;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="content">
+    <div class="container">
         <h1>Facts About CTFs (Capture The Flag)</h1>
         <h2>What is a CTF?</h2>
         <p>Capture The Flag (CTF) is a type of cybersecurity competition where participants tackle security challenges to capture "flags." These flags are secret strings hidden in challenges.</p>
@@ -45,7 +71,7 @@
         <p>CTFs are an excellent way to improve cybersecurity skills, understand security concepts, and gain hands-on experience. They also provide networking opportunities with industry professionals and enthusiasts.</p>
         <h2>Popular CTF Events</h2>
         <ul>
-            <li><strong>customCTF:</strong> A CTF invented entirely by one person.</li>
+            <li><strong>customCTF</strong> A CTF made entirely by one person.</li>
             <li><strong>PicoCTF:</strong> A beginner-friendly CTF designed for high school students but open to everyone.</li>
             <li><strong>Google CTF:</strong> Hosted by Google, offering both beginner and advanced challenges.</li>
         </ul>
