--- a/index.html
+++ b/index.html
@@ -1,80 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facts About CTFs</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f7fa;
-            color: #434C5E;
-            line-height: 1.6;
-        }
-        .container {
-            max-width: 800px;
-            margin: 40px auto;
-            padding: 20px;
-            background-color: #ffffff;
-            border-radius: 12px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            transition: box-shadow 0.3s ease;
-        }
-        .container:hover {
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-        }
-        h1 {
-            color: #3B4252;
-            font-weight: 700;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        h2 {
-            color: #81A1C1;
-            font-weight: 500;
-            margin-top: 30px;
-        }
-        p, ul {
-            font-weight: 400;
-        }
-        ul {
-            list-style-type: disc;
-            padding-left: 20px;
-        }
-        li {
-            margin-bottom: 10px;
-        }
-        @media (max-width: 600px) {
-            .container {
-                margin: 20px 10px;
-            }
-            h1 {
-                font-size: 1.8em;
-            }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Modern CTF Facts</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #ece9e6, #ffffff);
+      color: #333;
+      line-height: 1.6;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+    .container {
+      max-width: 900px;
+      width: 90%;
+      margin: 20px;
+      padding: 40px;
+      background-color: #fff;
+      border-radius: 15px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .container:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+    }
+    h1 {
+      color: #2E3440;
+      font-size: 2.5em;
+      text-align: center;
+      margin-bottom: 20px;
+      font-weight: 700;
+      letter-spacing: 1px;
+    }
+    h2 {
+      color: #4C566A;
+      font-weight: 500;
+      margin-top: 40px;
+      margin-bottom: 15px;
+    }
+    p {
+      color: #4C566A;
+      font-weight: 400;
+      margin-bottom: 20px;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    li {
+      background-color: #f8f9fa;
+      margin-bottom: 10px;
+      padding: 10px 15px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      cursor: pointer;
+      position: relative;
+      transition: background-color 0.3s;
+    }
+    li:hover {
+      background-color: #e2e5e9;
+    }
+    li strong {
+      color: #2E3440;
+    }
+    .pop-out {
+      display: none;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 80%;
+      max-width: 400px;
+      background-color: #ffffff;
+      border-radius: 10px;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+      padding: 20px;
+      z-index: 1000;
+    }
+    .pop-out p {
+      margin-bottom: 0;
+    }
+    .overlay {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      z-index: 999;
+    }
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 2em;
+      }
+      h2 {
+        font-size: 1.5em;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Facts About CTFs (Capture The Flag)</h1>
-        <h2>What is a CTF?</h2>
-        <p>Capture The Flag (CTF) is a type of cybersecurity competition where participants tackle security challenges to capture "flags." These flags are secret strings hidden in challenges.</p>
-        <h2>Types of CTFs</h2>
-        <ul>
-            <li><strong>Jeopardy-style:</strong> Consists of challenges in categories like cryptography, forensics, and web security. Participants solve tasks to earn points.</li>
-            <li><strong>Attack-Defense:</strong> Teams defend their systems while trying to attack others. It's a real-time simulation of cybersecurity warfare.</li>
-        </ul>
-        <h2>Why Participate?</h2>
-        <p>CTFs are an excellent way to improve cybersecurity skills, understand security concepts, and gain hands-on experience. They also provide networking opportunities with industry professionals and enthusiasts.</p>
-        <h2>Popular CTF Events</h2>
-        <ul>
-            <li><strong>customCTF</strong> A CTF made entirely by one person.</li>
-            <li><strong>PicoCTF:</strong> A beginner-friendly CTF designed for high school students but open to everyone.</li>
-            <li><strong>Google CTF:</strong> Hosted by Google, offering both beginner and advanced challenges.</li>
-        </ul>
-    </div>
+  <div class="overlay" id="overlay"></div>
+  <div class="container">
+    <h1>Facts About CTFs (Capture The Flag)</h1>
+    <h2>What is a CTF?</h2>
+    <p>Capture The Flag (CTF) is a type of cybersecurity competition where participants tackle security challenges to
+      capture "flags." These flags are secret strings hidden in challenges.</p>
+    <h2>Types of CTFs</h2>
+    <ul>
+      <li><strong>Jeopardy-style:</strong> Consists of challenges in categories like cryptography, forensics, and web
+        security. Participants solve tasks to earn points.</li>
+      <li><strong>Attack-Defense:</strong> Teams defend their systems while trying to attack others. It's a real-time
+        simulation of cybersecurity warfare.</li>
+    </ul>
+    <h2>Why Participate?</h2>
+    <p>CTFs are an excellent way to improve cybersecurity skills, understand security concepts, and gain hands-on
+      experience. They also provide networking opportunities with industry professionals and enthusiasts.</p>
+    <h2>Popular CTF Events</h2>
+    <ul>
+      <li onclick="showPopout('customCTF')"><strong>customCTF:</strong> A CTF made entirely by one person.
+        <div class="pop-out" id="defcon">
+          <p>You probably found this website from customCTF! ALso, I like cookies. :)</p>
+        </div>
+      </li>
+      <li onclick="showPopout('picoctf')"><strong>PicoCTF:</strong> A beginner-friendly CTF designed for high school
+        students but open to everyone.
+        <div class="pop-out" id="picoctf">
+          <p>PicoCTF is designed to introduce young students to cybersecurity concepts through fun, engaging challenges
+            that gradually increase in difficulty.</p>
+        </div>
+      </li>
+      <li onclick="showPopout('googlectf')"><strong>Google CTF:</strong> Hosted by Google, offering both beginner and
+        advanced challenges.
+        <div class="pop-out" id="googlectf">
+          <p>Google CTF includes two rounds: a qualification round for individuals and teams, and a final round for top
+            qualifiers. It's known for its challenging tasks and rewarding experiences.</p>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <script>
+    const overlay = document.getElementById('overlay');
+    function showPopout(id) {
+      const popOut = document.getElementById(id);
+      popOut.style.display = 'block';
+      overlay.style.display = 'block';
+    }
+    overlay.addEventListener('click', () => {
+      document.querySelectorAll('.pop-out').forEach(pop => pop.style.display = 'none');
+      overlay.style.display = 'none';
+    });
+  </script>
 </body>
 </html>
