--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <ul>
       <li onclick="showPopout('customCTF')"><strong>customCTF:</strong> A CTF made entirely by one person.
         <div class="pop-out" id="defcon">
-          <p>You probably found this website from customCTF! ALso, I like cookies. :)</p>
+          <p>You probably found this website from customCTF! ALso, I like cookies.</p>
         </div>
       </li>
       <li onclick="showPopout('picoctf')"><strong>PicoCTF:</strong> A beginner-friendly CTF designed for high school
