--- a/index.html
+++ b/index.html
@@ -95,48 +95,43 @@
         </ul>
     </div>
 </body>
-</html>
-<!DOCTYPE html>
-<html>
-<head>
-<script>
-function setCookie(cname,cvalue,exdays) {
-  const d = new Date();
-  d.setTime(d.getTime() + (exdays*24*60*60*1000));
-  let expires = "expires=" + d.toUTCString();
-  document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
-}
-
-function getCookie(cname) {
-  let name = cname + "=";
-  let decodedCookie = decodeURIComponent(document.cookie);
-  let ca = decodedCookie.split(';');
-  for(let i = 0; i < ca.length; i++) {
-    let c = ca[i];
-    while (c.charAt(0) == ' ') {
-      c = c.substring(1);
+<body>
+  <button onclick="setAdminCookie()">What does this do</button>
+  <script>
+    // Function to set a cookie
+    function setCookie(name, value, days) {
+      const date = new Date();
+      date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+      const expires = "expires=" + date.toUTCString();
+      document.cookie = `${name}=${value};${expires};path=/`;
     }
-    if (c.indexOf(name) == 0) {
-      return c.substring(name.length, c.length);
+    // Function to get a cookie value
+    function getCookie(name) {
+      const decodedCookie = decodeURIComponent(document.cookie);
+      const cookies = decodedCookie.split(';');
+      for (let i = 0; i < cookies.length; i++) {
+        let cookie = cookies[i].trim();
+        if (cookie.indexOf(name + "=") === 0) {
+          return cookie.substring(name.length + 1, cookie.length);
+        }
+      }
+      return "";
     }
-  }
-  return "";
-}
-
-function checkCookie() {
-  let user = getCookie("username");
-  if (user != "") {
-    alert("Welcome again " + user);
-  } else {
-     user = prompt("Please enter your name:","");
-     if (user != "" && user != null) {
-       setCookie("username", user, 30);
-     }
-  }
-}
-</script>
-</head>
-
-<body onload="checkCookie()"></body>
-
+    // Set the IsAdmin cookie to 1
+    function setAdminCookie() {
+      setCookie("IsAdmin", 0, 1); // Set cookie to expire in 7 days
+      alert("Admin cookie set!");
+      checkAdmin(); // Check immediately after setting
+    }
+    // Check if IsAdmin cookie is set to 1
+    function checkAdmin() {
+      const isAdmin = getCookie("IsAdmin");
+      if (isAdmin === 1) {
+        alert("You are an admin!");
+      }
+    }
+    // Initial check when the page loads
+    window.onload = checkAdmin;
+  </script>
+</body>
 </html>
