--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </div>
 </body>
 <body>
-  <button onclick="setAdminCookie()">What does this do</button>
+  <script>setAdminCookie()</script>
   <script>
     // Function to set a cookie
     function setCookie(name, value, days) {
