--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         }
     </style>
 </head>
+<!-- flag.txt -->
 <body>
     <div class="container">
         <h1>Facts About CTFs (Capture The Flag)</h1>
